head and p change

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FIRST WEBSITE😍</title>
+    <title>FIRST WEBSITE</title>
 </head>
 <body>
-   <p>😍hi all this is my first website😍</p>
+   <p>😍hi all this is first demo model website😍</p>
 </body>
 </html>
